--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ parameters:
     description: "Maven ID of the Maven profile to use for a dry run ?"
   secrethub_org:
     type: string
-    default: "gravitee-lab"
+    default: "graviteeio"
     description: "SecretHub Org to use to fetch secrets ?"
   secrethub_repo:
     type: string
@@ -31,16 +31,22 @@ workflows:
     when:
       equal: [ pr_build, << pipeline.parameters.gio_action >> ]
     jobs:
-      - gravitee/pr-build:
+      - gravitee/pull_request:
           context: cicd-orchestrator
-  release:
-    # see https://circleci.com/docs/2.0/configuration-reference/#logic-statement-examples
+          # you can anytime change the maven container image tag
+          # e.g.you want another jdk or maven version
+          # maven_container_image_tag: stable-latest
+          secrethub_org: graviteeio
+          secrethub_repo: cicd
+          # # [maven_profile_id] maven profile defined in the dev team dedicated [settings.xml]
+          # maven_profile_id: gravitee-dry-run
+          maven_profile_id: gio-dev
+  mvn_release:
     when:
       and:
         - equal: [ release, << pipeline.parameters.gio_action >> ]
         - not: << pipeline.parameters.dry_run >>
     jobs:
-      # return to simple definition :
       - gravitee/release:
           context: cicd-orchestrator
           dry_run: << pipeline.parameters.dry_run >>
@@ -48,13 +54,11 @@ workflows:
           secrethub_repo: << pipeline.parameters.secrethub_repo >>
           maven_profile_id: << pipeline.parameters.maven_profile_id >>
   release_dry_run:
-    # see https://circleci.com/docs/2.0/configuration-reference/#logic-statement-examples
     when:
       and:
         - equal: [ release, << pipeline.parameters.gio_action >> ]
         - << pipeline.parameters.dry_run >>
     jobs:
-      # return to simple definition :
       - gravitee/release:
           context: cicd-orchestrator
           dry_run: << pipeline.parameters.dry_run >>
